[workspace]
resolver = "2"
members = [
	"subr",
	"subvertpy_util",
	"repos",
	"ra",
	"client",
	"wc",
]

[workspace.package]
version = "0.12.0"
edition = "2021"

[workspace.dependencies]
pyo3 = { version = "0.28" }
#subversion = { version = ">=0.0.5" }
subversion = { version = "0.1.10" }
#subversion = { path = "../subversion-rs" }
pyo3-filelike = { version = "0.5" }
