[build-system]
requires = ["setuptools>=61.2", "setuptools_rust"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["ruff==0.9.3"]

[tool.cibuildwheel]
environment = {PATH="$HOME/.cargo/bin:$PATH"}
before-build = "pip install -U setuptools-rust && curl https://sh.rustup.rs -sSf | sh -s -- --profile=minimal -y && rustup show"

[tool.ruff.lint]
select = [
    "ANN",
    "D",
    "E",
    "F",
    "I",
    "PIE",
    "UP",
    "RSE",
    "RUF",
]
ignore = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN101",  # missing-type-self
    "ANN102",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN205",
    "ANN206",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D204",
    "D205",
    "D417",
    "E501",  # line too long
    "E741",  # ambiguous variable name
]

[tool.ruff]
target-version = "py37"

[tool.ruff.lint.pydocstyle]
convention = "google"

[project]
name = "subvertpy"
description = "Alternative Python bindings for Subversion"
readme = "README.md"
keywords = [
    "svn",
    "subvertpy",
    "subversion",
    "bindings",
]
license = {text = "LGPLv2.1 or later"}
authors = [{name = "Jelmer Vernooĳ", email = "jelmer@jelmer.uk"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX",
    "Topic :: Software Development :: Version Control",
]
urls = {Homepage = "https://github.com/jelmer/subvertpy"}
dynamic = ["version"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "subvertpy.__version__"}
