[flake8]
exclude = build,.git,build-pypy,.tox,subversion-*,serf-*

[metadata]
name = subvertpy
version = attr:subvertpy.__version__
description = Alternative Python bindings for Subversion
keywords =
     svn
     subvertpy
     subversion
     bindings
url = https://jelmer.uk/subvertpy
license = LGPLv2.1 or later
author = Jelmer Vernooĳ
author_email = jelmer@jelmer.uk
classifiers =
     Development Status :: 4 - Beta
     License :: OSI Approved :: GNU General Public
     License v2 or later (GPLv2+)
     Programming Language :: Python :: 3.4
     Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: Implementation :: CPython
     Operating System :: POSIX
     Topic :: Software Development :: Version Control
